@@ -3,6 +3,9 @@
 	* inst/tinytest/test_sugar.R: Skip one more NA related test on arm64
 	and macOS as failure is seen at r-universe on arm64
 
+	* .github/workflows/macos.yaml: Add basic r-ci setup but dialed-down
+	to macOS only (as Linux is covered via multiple Docker setups)
+
 2024-08-19  Dirk Eddelbuettel  <edd@debian.org>
 
 	* Contributing.md: Refreshed content
